<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_lite"
    android:padding="24dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="Enter the first 6-8 digits of the card number"
        android:id="@+id/text_view_header"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="12dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_view_header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_card"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:hint="card number"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_bin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:inputType="number"
                    android:maxLength="8"
                    android:textSize="24sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_view_bank_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                tools:text="@string/bank_name"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/text_input_layout_card"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_card" />

            <TextView
                android:id="@+id/text_view_bank_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                tools:text="tel:."
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/text_input_layout_card"
                app:layout_constraintTop_toBottomOf="@id/text_view_bank_name" />

            <TextView
                android:id="@+id/text_view_bank_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                tools:text="url:."
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/text_input_layout_card"
                app:layout_constraintTop_toBottomOf="@id/text_view_bank_phone" />


            <TextView
                android:id="@+id/text_view_card_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                tools:text="@string/type_of_card"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/text_input_layout_card"
                app:layout_constraintTop_toBottomOf="@id/text_view_bank_url" />

            <TextView
                android:id="@+id/text_view_card_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                tools:text="@string/brand"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/text_input_layout_card"
                app:layout_constraintTop_toBottomOf="@id/text_view_card_type" />

            <TextView
                android:id="@+id/text_view_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                tools:text="@string/country"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/text_input_layout_card"
                app:layout_constraintTop_toBottomOf="@id/text_view_card_brand" />

            <TextView
                android:id="@+id/text_view_payment_system"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                tools:text="@string/payment_processing_system"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/text_input_layout_card"
                app:layout_constraintTop_toBottomOf="@id/text_view_country" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progress_bar_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_view_card" />


    <Button
        android:id="@+id/button_get_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="check"
        app:layout_constraintEnd_toEndOf="@id/card_view_card"
        app:layout_constraintTop_toBottomOf="@id/progress_bar_check" />

    <Button
        android:id="@+id/button_clear_list"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="clear"
        app:layout_constraintEnd_toEndOf="@id/card_previous_list"
        app:layout_constraintTop_toBottomOf="@id/button_get_info" />

    <TextView
        android:id="@+id/text_view_previous_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="Previous requests"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/card_previous_list"
        app:layout_constraintEnd_toStartOf="@id/button_clear_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_get_info" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card_previous_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="12dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/button_clear_list">

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/support_simple_spinner_dropdown_item"></ListView>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>